Use Files.writeString introduced with Java 21